--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <script>
+        const script = document.createElement('script')
+        script.src = 'https://cdn.bootcss.com/vConsole/3.3.4/vconsole.min.js'
+        document.head.appendChild(script)
+        script.onload = function () {
+          new VConsole()
+        }
+    </script>
   </head>
   <body>
     <noscript>
